--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>2.7.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
